src/test/ui/rfc1598-generic-associated-types/pointer_family.stderr
warning: the feature `generic_associated_types` is incomplete and may cause the compiler to crash
  --> $DIR/pointer_family.rs:11:12
   |
LL | #![feature(generic_associated_types)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0109]: type parameters are not allowed on this type
  --> $DIR/pointer_family.rs:47:21
   |
LL |     bar: P::Pointer<String>,
   |                     ^^^^^^ type parameter not allowed

error[E0109]: type parameters are not allowed on this type
  --> $DIR/pointer_family.rs:22:42
   |
LL |     fn new<T>(value: T) -> Self::Pointer<T>;
   |                                          ^ type parameter not allowed

error[E0109]: type parameters are not allowed on this type
  --> $DIR/pointer_family.rs:30:42
   |
LL |     fn new<T>(value: T) -> Self::Pointer<T> {
   |                                          ^ type parameter not allowed

error[E0109]: type parameters are not allowed on this type
  --> $DIR/pointer_family.rs:40:42
   |
LL |     fn new<T>(value: T) -> Self::Pointer<T> {
   |                                          ^ type parameter not allowed

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0109`.
